完成一楼温湿度报表

--- a/app/pages/scada/index.less
+++ b/app/pages/scada/index.less
@@ -194,13 +194,13 @@
             }
             .title1,.title2{
                 position: absolute;
-                background: @name-bgcolor;
+                color: @name-bgcolor;
                 padding: @name-padding;
                 font-size: @title-font-size;
-                color: @name-color;
+                background: @name-color;
             }
             .title1{
-                background: @name-bgcolor;
+                // background: @name-bgcolor;
                 left:@first-floor-width*0.061;
             }
             .title2{
