delete the title bgcolor

--- a/app/pages/scada/index.less
+++ b/app/pages/scada/index.less
@@ -194,10 +194,11 @@
             }
             .title1,.title2{
                 position: absolute;
+                // color: @name-bgcolor;
                 color: @name-bgcolor;
                 padding: @name-padding;
                 font-size: @title-font-size;
-                background: @name-color;
+                // background: @name-color;
             }
             .title1{
                 // background: @name-bgcolor;
