删除冗余代码

--- a/app/pages/scada/index.less
+++ b/app/pages/scada/index.less
@@ -197,7 +197,7 @@
                 color: @name-bgcolor;
                 padding: @name-padding;
                 font-size: @title-font-size;
-                background: @name-color;
+                // background: @name-color;
             }
             .title1{
                 // background: @name-bgcolor;
